# Block-Matrix-Multiplication

./: CMakeLists.txt  MultiplicationBlockMatrix.pro  README.md
headers/: utils.h
matrices/: ldm.txt
results/clang/double/: ext_double.csv  int_double.csv  seq_double.csv
results/clang/float/: ext_float.csv  int_float.csv  seq_float.csv
results/gcc/double/: ext_double.csv  int_double.csv  seq_double.csv
results/gcc/float/: ext_float.csv  int_float.csv  seq_float.csv
src/: main.cpp  utils.cpp
tests/: A4.txt  B4.txt
